# coursework_6_skymarket

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
frontend_react/: Dockerfile
market_postgres/: docker-compose.yaml
skymarket/: Dockerfile  docker-compose.yaml  manage.py  requirements.txt
skymarket/ads/: admin.py  filters.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_comment_options_ad_author_and_more.py  0002_auto_20230907_1938.py  0003_auto_20230907_1951.py  0004_alter_comment_author.py  0005_alter_ad_author.py
skymarket/config/: settings.py  urls.py
skymarket/skymarket/: asgi.py  settings.py  urls.py  wsgi.py
skymarket/users/: admin.py  email.py  managers.py  models.py  serializers.py  urls.py  views.py
skymarket/users/management/commands/: cmu.py  csu.py  cuu.py  loadall.py
skymarket/users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_user_role.py  0004_alter_user_options.py  0005_auto_20231218_1928.py
