[tool.poetry]
name = "diplom-work1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "diplom_work1"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
asgiref = "^3.7.2"
black = "^23.11.0"
certifi = "^2023.7.22"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
coreapi = "^2.3.3"
coreschema = "^0.0.4"
cryptography = "^41.0.5"
defusedxml = "^0.7.1"
django-cors-headers = "^4.3.0"
django-filter = "^23.3"
django-phonenumber-field = "^7.2.0"
django-templated-mail = "^1.1.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
djoser = "^2.2.2"
drf-nested-routers = "^0.93.4"
drf-yasg = "^1.21.7"
idna = "^3.4"
inflection = "^0.5.1"
isort = "^5.12.0"
itypes = "^1.2.0"
jinja2 = "^3.1.2"
markupsafe = "^2.1.3"
mypy-extensions = "^1.0.0"
oauthlib = "^3.2.2"
packaging = "^23.2"
pathspec = "^0.11.2"
phonenumbers = "^8.13.24"
pillow = "^10.1.0"
platformdirs = "^4.0.0"
psycopg2 = "^2.9.9"
pycparser = "^2.21"
pyjwt = "^2.8.0"
pyparsing = "^3.1.1"
python-dotenv = "^1.0.0"
python3-openid = "^3.2.0"
pytz = "^2023.3.post1"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
ruamel-yaml = "^0.18.5"
ruamel-yaml-clib = "^0.2.8"
six = "^1.16.0"
social-auth-core = "^4.5.0"
social-auth-app-django = "^5.4.0"
sqlparse = "^0.4.4"
tomli = "^2.0.1"
uritemplate = "^4.1.1"
urllib3 = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
